--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+db.sqlite3
+blog/migrations/
+blog/migrations/*
+
 ### Example user template template
 ### Example user template
 
@@ -118,6 +122,7 @@ celerybeat.pid
 .venv
 env/
 venv/
+venv/*
 ENV/
 env.bak/
 venv.bak/
